[tool.poetry]
name = "demo_app"
version = "0.1.0"
description = ""
authors = ["Jeronimo F. Martinez Sanchez <jms@rz0r.net>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
sqlalchemy = "^1.3.20"
psycopg2-binary = "^2.8.6"
argon2-cffi = "^20.1.0"
flask-security-too = "^3.4.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
